--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@
 *.html linguist-detectable=false  
 *.xml linguist-detectable=false 
 *.asm linguist-detectable=false 
+
+Assets/TextMesh?Pro/** linguist-generated
